--- a/front/board-react/package.json
+++ b/front/board-react/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
