boardWrite올라가는거 확인, productWriteView 분리중

--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -6,9 +6,7 @@ spring.datasource.password=root
 
 jwt.security-key=security!@#
 
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-
-file.path=C:/Users/fileupload/
+file.path=C:/fileupload/
 file.url=http://localhost:4040/file/
 
 spring.servlet.multipart.max-file-size=100MB
